# supa-r2

./: .env.example  .gitignore  README.md  pyproject.toml
src/r2db/: __init__.py  cli.py  publish.py  state.py  store.py  targets.py
tests/: test_publish.py  test_state.py  test_store.py
