[project]
name = "r2db"
version = "0.1.0"
description = "A generic Cloudflare R2 database toolkit — a Supabase replacement (document store + static-JSON publishing + file backup/restore)."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
r2db = "r2db.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/r2db"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
extend-select = ["I"]
